fix invisible checkbox

--- a/CSSWENGxGK/wwwroot/css/register-page.css
+++ b/CSSWENGxGK/wwwroot/css/register-page.css
@@ -115,7 +115,7 @@
     font-size: 16px;
 }
 
-.register-checkbox{
+/* .register-checkbox{
 	position: absolute;
 	opacity: 0;
 	cursor: pointer;
@@ -125,7 +125,7 @@
 
 .register-checkbox:hover {
 	
-}
+} */
 
 .link-text {
 	display: flex;
